--- a/app/assets/stylesheets/modules/navbar.css.scss
+++ b/app/assets/stylesheets/modules/navbar.css.scss
@@ -54,7 +54,7 @@
 .navbar-homepage {
   height: 72px;
   background: #4D5055;
-  
+
   .navbar-header {
     height: 72px;
   }
@@ -83,10 +83,6 @@
       }
     }
 
-  .btn {
-    margin-top: 18px;
-  }
-
   .btn-default {
     &:hover,
     &.hover {
@@ -99,6 +95,17 @@
     a {
       padding-top: 25px;
       padding-bottom: 25px;
+      &.active {
+        border-top: 4px solid #fff;
+        padding-top: 21px;
+      }
+      &.btn {
+        margin-top: 15px;
+        padding: 10px 15px;
+      }
+      &.btn-default {
+        padding: 8px 15px;
+      }
     }
   }
 
@@ -123,7 +130,7 @@
       margin-left: 0;
       border-radius: 0;
       -webkit-border-radius: 0;
-    }  
+    }
   }
 }
 
