--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -73,9 +73,9 @@
           <li><a href="#features">Features</a></li>
           <li><a href="#pricing">Pricing</a></li>
         </ul>
-        <ul class="nav navbar-nav pull-right">
-          <li><%= link_to 'Sign in', new_user_session_path, class: 'btn btn-default' %></li>
-          <li><%= link_to 'Sign up for free', new_accounts_path, class: 'btn btn-primary', rel: 'signup' %></li>
+        <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to 'Try the demo', '#', class: 'btn btn-default' %></li>
+          <li><%= link_to 'Get Started', new_accounts_path, class: 'btn btn-primary', rel: 'signup' %></li>
         </ul>
       </div>
 
